# notes

./: .gitignore  README.norg  cmake-setup.md  index.norg
.obsidian/: app.json  workspace.json
cpp/cmake/0.introduction/: intro.md
dennis-ritchie/: a.out
dennis-ritchie/00c-intro/: function.c  loops.c  syntax.c  test.md  test.txt
dennis-ritchie/arena/: Makefile  arena.c
dsa/: a.out
dsa/trash/: struct.cpp
git/: basic-cmds.md
git/1.1setup/: config.md  porcelain-plumbing.md
git/1.2repositories/: log.md  status.md
git/1.3internals/: cat-file.md  different-hashes.md  plumbing.md
golang/00basics/: start.go
golang/01variables/: go.mod  main.go  runes.go  start.go  stringFormation.go
golang/02conditionals/: go.mod  if.go  main.go  switch.go
golang/03functions/: early-returns.go  main.go  named-return-values.go
golang/04structs/: main.go
golang/05interfaces/: main.go
golang/06errors/: error-interface.go  error-pkg.go  main.go
golang/08slices/: go.mod  main.go
golang/backend/backend_test/: README.md  go.mod  go.sum
golang/backend/counter/: README.md  go.mod  go.sum
golang/backend/echo/: README.md  go.mod  go.sum
golang/backend/echo_htmx/: README.md  go.mod  go.sum
gtk/gtk_tutorial/: main.c  meson.build
linux/terminals-shells/: shell.md  terminal.md
lua/: test.lua
lua/oops/: functions.lua  inheritance.lua
python/fastapi/get_imgs/: .env.example  .gitignore  main.py  pyproject.toml
python/fastapi/get_imgs/app/: app.py  db.py  images.py  schemas.py  users.py
sdl3/: test
sdl3/01open-window/: compile_flags.txt  main.c
(+123 files in other folders)
